reconfigured news and added popular tools section

--- a/index.html
+++ b/index.html
@@ -113,38 +113,56 @@
         <div class="content-section-1">
           <div class="container">
             <div class="row content-global-row">
-              <div class="col-sm-12 col-md-8">
+              <div class="col-sm-12 col-md-9">
 
                 <div class="row">
                   <div class="col-xs-12">
-                    <h3>Proin sagittis molestie mauris et egestas. Aenean ullamcorper lectus et nibh lacinia scelerisque.</h3>
+                    <h3>Indian Nations Council of Governments <br><span class="theme-color"><i class="fa fa-angle-double-right"></i> Latest News</span></h3>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-xs-12 section-border">
-                    <p class="theme-color">Nulla egestas elit sed ipsum mollis ultricies.</p>
+                    <p class="theme-color">Highlights and Information from around the Tulsa region</p>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-6">
-                    <h5>Praesent id odio egestas</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac odio vitae justo dapibus malesuada. Proin posuere finibus venenatis. Mauris mollis euismod leo sed egestas. Nam a lacus et diam ultricies rhoncus. Nulla egestas elit sed ipsum mollis ultricies.</p>
-                    <button type="button" class="btn btn-primary"role="button">MORE</button>
+                  <div class="col-xs-12 news-post">
+                      <div class="news-post-inner">
+                          <h5>Celebrating 50 Years of Service to the Tulsa region</h5>
+                          <p>In 1967, the number one song according to Billboard charts was “To Sir with Love” by Lulu. “A Man for All Seasons” won the best motion picture award at the Oscars, and a gallon of gasoline was only 27 cents. That was also the year that INCOG was created by forward-thinking local officials to provide a forum for addressing regional challenges.
+                          <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                      </div>
                   </div>
-                  <div class="col-sm-6">
-                    <h5>Praesent id odio egestas</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac odio vitae justo dapibus malesuada. Proin posuere finibus venenatis. Mauris mollis euismod leo sed egestas. Nam a lacus et diam ultricies rhoncus. Nulla egestas elit sed ipsum mollis ultricies.</p>
-                    <button type="button" class="btn btn-primary"role="button">MORE</button>
+                  <div class="col-xs-12 news-post">
+                      <div class="news-post-inner">
+                          <h5>Unique Partnership to Facilitate Completion of Long-Planned Gilcrease Expressway</h5>
+                          <p>An innovative partnership involving the Oklahoma Turnpike Authority, the City of Tulsa, Tulsa County, Oklahoma Department of Transportation, and INCOG will complete a key portion of the long-planned Gilcrease Expressway plan.
+                          <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                      </div>
+                  </div>
+                  <div class="col-xs-12 news-post">
+                      <div class="news-post-inner">
+                          <h5>HOME Consortium Breaks Ground on Tiny Home Complex in Bartlesville, OK</h5>
+                          <p>The Cottages on Sixth Street in west Bartlesville is a 22-unit tiny home development which will be built on 1.68 undeveloped acres north of Adams Boulevard between Virginia and Kaw Avenues. A groundbreaking for phase one of the project — the first nine, 544-square foot homes — was held March 3.
+                          <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                      </div>
+                  </div>
+                  <div class="col-xs-12 news-post">
+                      <div class="news-post-inner">
+                          <h5>INCOG Receives EDA Planning Grant</h5>
+                          <p>INCOG has been awarded a $210,000, 3-year planning grant from the U.S. Economic Development Administration (EDA). The grant will fund activities working with public entities within the three county area to identify and secure resources for economic development activities and support regional economic development initiatives.
+                          <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                      </div>
                   </div>
                 </div>
 
               </div>
 
-              <div class="col-sm-12 col-md-4">
+              <div class="col-sm-12 col-md-3">
                 <div class="department-list">
                   <nav>
                     <ul>
-                      <li class="department-list-header"><h4>Department List</h4></li>
+                      <li class="department-list-header"><h4>Departments</h4></li>
                       <li><a href="#">Transportaion Planning</a></li>
                       <li><a href="#">Zoning and Land Use</a></li>
                       <li><a href="#">Enviornmental and Energy Planning</a></li>
@@ -163,6 +181,60 @@
           </div>
 
         </div>
+
+
+        <div class="popular-tools">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Popular Tools</h3>
+
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-4 col-md-3">
+                                <div class="pop-tool-block">
+                                    <div class="pop-tool-block-inner">
+                                        <p><i class="fa fa-superpowers"></i>
+                                        <br>
+                                        Ozone Alert
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-3">
+                                <div class="pop-tool-block">
+                                    <div class="pop-tool-block-inner">
+                                        <p><i class="fa fa-map-o"></i>
+                                        <br>
+                                        Tulsa Zoning Map</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-3">
+                                <div class="pop-tool-block">
+                                    <div class="pop-tool-block-inner">
+                                        <p><i class="fa fa-bicycle"></i>
+                                        <br>
+                                        Tulsa Cycling Guide</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-3">
+                                <div class="pop-tool-block">
+                                    <div class="pop-tool-block-inner">
+                                        <p><i class="fa fa-map-o"></i>
+                                        <br>
+                                        GIS Mapping</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
         <div class="call-to-action">
           <div class="container">
