--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     <div class="info-block-icon-holder">
                                         <span class="fa-stack fa-lg">
                                             <i class="fa fa-circle fa-stack-2x theme-color"></i>
-                                            <i class="fa fa-map-o fa-stack-1x white-text"></i>
+                                            <i class="fa fa-map-signs fa-stack-1x white-text"></i>
                                         </span>
                                     </div>
                                 </div>
@@ -203,7 +203,7 @@
                             <div class="col-xs-6 col-sm-4 col-md-3">
                                 <div class="pop-tool-block">
                                     <div class="pop-tool-block-inner">
-                                        <p><i class="fa fa-map-o"></i>
+                                        <p><i class="fa fa-map-signs"></i>
                                         <br>
                                         Tulsa Zoning Map</p>
                                     </div>
