--- a/index.html
+++ b/index.html
@@ -186,8 +186,11 @@
         <div class="popular-tools">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Popular Tools</h3>
+                    <div class="col-xs-12 pop-tools-header">
+                        <h3 class="pop-tools-header">Popular Tools and Resources
+                        <br>
+                        <span class="theme-color"><i class="fa fa-angle-double-right"></i> View More</span>
+                        </h3>
 
                         <div class="row">
                             <div class="col-xs-6 col-sm-4 col-md-3">
