misc style updates

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
                 <div class="row">
                   <div class="col-xs-12">
-                    <h3>Indian Nations Council of Governments <br><span class="theme-color"><i class="fa fa-angle-double-right"></i> Latest News</span></h3>
+                    <h3>Indian Nations Council of Governments
+                    <br><span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Latest News</a></span>
+                    </h3>
                   </div>
                 </div>
                 <div class="row">
@@ -155,7 +157,6 @@
                       </div>
                   </div>
                 </div>
-
               </div>
 
               <div class="col-sm-12 col-md-3">
@@ -189,7 +190,7 @@
                     <div class="col-xs-12 pop-tools-header">
                         <h3 class="pop-tools-header">Popular Tools and Resources
                         <br>
-                        <span class="theme-color"><i class="fa fa-angle-double-right"></i> View More</span>
+                        <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> View More</a></span>
                         </h3>
 
                         <div class="row">
@@ -262,6 +263,19 @@
           </div>
 
         </div>
+
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                    </div>
+                </div>
+            </div>
+
+
+        </footer>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
