--- a/index.html
+++ b/index.html
@@ -265,6 +265,119 @@
         </div>
 
 
+        <div class="upcomming-events-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Upcomming Events
+                        <br>
+                        <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> View More</a></span>
+                        </h3>
+                    </div>
+                    <div class="col-xs-12">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="cal-bg-wrap">
+
+                                    <div class="row">
+                                        <div class="col-xs-12 cal-month-header">
+                                            <h4>This Month</h4>
+                                        </div>
+                                    </div>
+                                    <div class="row"><!-- event 1 -->
+                                        <div class="col-xs-12">
+                                            <div class="date-event-wrap">
+                                                <div class="date-holder float-left">
+                                                    <div class="date-holder-inner">
+                                                        <p class="date-num">21</p>
+                                                        <p class="date-month">Jun</p>
+                                                    </div>
+                                                </div>
+                                                <div class="event-info float-left">
+                                                    <h5>TMAPC Meeting</h5>
+                                                    <p>TIME: 1:30 PM</p>
+                                                    <p>Brief Info and Explanation</p>
+                                                </div>
+                                                <div class="clear-fix">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><!-- end event 1 -->
+
+                                    <div class="row"><!-- event 2 -->
+                                        <div class="col-xs-12">
+                                            <div class="date-event-wrap">
+                                                <div class="date-holder float-left">
+                                                    <div class="date-holder-inner">
+                                                        <p class="date-num">27</p>
+                                                        <p class="date-month">Jun</p>
+                                                    </div>
+                                                </div>
+                                                <div class="event-info float-left">
+                                                    <h5>BOA Meeting</h5>
+                                                    <p>Brief Info and Explanation</p>
+                                                </div>
+                                                <div class="clear-fix">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><!-- end event 2 -->
+                                    <div class="row"><!-- event 3 -->
+                                        <div class="col-xs-12">
+                                            <div class="date-event-wrap">
+                                                <div class="date-holder float-left">
+                                                    <div class="date-holder-inner">
+                                                        <p class="date-num">30</p>
+                                                        <p class="date-month">Jun</p>
+                                                    </div>
+                                                </div>
+                                                <div class="event-info float-left">
+                                                    <h5>Some Meeting</h5>
+                                                    <p>Brief Info and Explanation</p>
+                                                </div>
+                                                <div class="clear-fix">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><!-- end event 3 -->
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 test-case">
+                                <div class="cal-bg-wrap">
+
+                                    <div class="row">
+                                        <div class="col-xs-12 cal-month-header">
+                                            <h4>Next Month</h4>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12">
+                                            <div class="date-event-wrap">
+                                                <div class="date-holder float-left">
+                                                    <div class="date-holder-inner">
+                                                        <p class="date-num">21</p>
+                                                        <p class="date-month">Jun</p>
+                                                    </div>
+                                                </div>
+                                                <div class="event-info float-left">
+                                                    <h5>TMAPC Meeting</h5>
+                                                    <p>Brief Info and Explanation</p>
+                                                </div>
+                                                <div class="clear-fix">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer>
             <div class="container">
                 <div class="row">
