added images to news roll

--- a/index.html
+++ b/index.html
@@ -131,29 +131,49 @@
                   <div class="col-xs-12 news-post">
                       <div class="news-post-inner">
                           <h5>Celebrating 50 Years of Service to the Tulsa region</h5>
+                          <div class="news-post-img-thumb">
+                              <img src="img/anniversary_seal.png" width="100%" height="auto">
+                          </div>
                           <p>In 1967, the number one song according to Billboard charts was “To Sir with Love” by Lulu. “A Man for All Seasons” won the best motion picture award at the Oscars, and a gallon of gasoline was only 27 cents. That was also the year that INCOG was created by forward-thinking local officials to provide a forum for addressing regional challenges.
                           <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                          <div class="clear-fix">
+                          </div>
                       </div>
                   </div>
                   <div class="col-xs-12 news-post">
                       <div class="news-post-inner">
                           <h5>Unique Partnership to Facilitate Completion of Long-Planned Gilcrease Expressway</h5>
+                          <div class="news-post-img-thumb">
+                              <img src="img/partnership.jpg" width="100%" height="auto">
+                          </div>
                           <p>An innovative partnership involving the Oklahoma Turnpike Authority, the City of Tulsa, Tulsa County, Oklahoma Department of Transportation, and INCOG will complete a key portion of the long-planned Gilcrease Expressway plan.
                           <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                          <div class="clear-fix">
+                          </div>
                       </div>
                   </div>
                   <div class="col-xs-12 news-post">
                       <div class="news-post-inner">
                           <h5>HOME Consortium Breaks Ground on Tiny Home Complex in Bartlesville, OK</h5>
+                          <div class="news-post-img-thumb">
+                              <img src="img/small-home.jpg" width="100%" height="auto">
+                          </div>
                           <p>The Cottages on Sixth Street in west Bartlesville is a 22-unit tiny home development which will be built on 1.68 undeveloped acres north of Adams Boulevard between Virginia and Kaw Avenues. A groundbreaking for phase one of the project — the first nine, 544-square foot homes — was held March 3.
                           <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                          <div class="clear-fix">
+                          </div>
                       </div>
                   </div>
                   <div class="col-xs-12 news-post">
                       <div class="news-post-inner">
                           <h5>INCOG Receives EDA Planning Grant</h5>
+                          <div class="news-post-img-thumb">
+                              <img src="img/eda-grant.jpg" width="100%" height="auto">
+                          </div>
                           <p>INCOG has been awarded a $210,000, 3-year planning grant from the U.S. Economic Development Administration (EDA). The grant will fund activities working with public entities within the three county area to identify and secure resources for economic development activities and support regional economic development initiatives.
                           <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
+                          <div class="clear-fix">              
+                          </div>
                       </div>
                   </div>
                 </div>
