--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                           </div>
                           <p>INCOG has been awarded a $210,000, 3-year planning grant from the U.S. Economic Development Administration (EDA). The grant will fund activities working with public entities within the three county area to identify and secure resources for economic development activities and support regional economic development initiatives.
                           <span class="theme-color"><a href="#"><i class="fa fa-angle-double-right"></i> Read More</a></span></p>
-                          <div class="clear-fix">              
+                          <div class="clear-fix">
                           </div>
                       </div>
                   </div>
@@ -376,8 +376,8 @@
                                             <div class="date-event-wrap">
                                                 <div class="date-holder float-left">
                                                     <div class="date-holder-inner">
-                                                        <p class="date-num">21</p>
-                                                        <p class="date-month">Jun</p>
+                                                        <p class="date-num">15</p>
+                                                        <p class="date-month">Jul</p>
                                                     </div>
                                                 </div>
                                                 <div class="event-info float-left">
@@ -399,9 +399,34 @@
         </div>
 
         <footer>
-            <div class="container">
+            <div class="container footer-container">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 footer-info-block">
+                        <h6>Quick Links</h6>
+                        <p><a href="#">Home</a></p>
+                        <p><a href="#">About</a></p>
+                        <p><a href="#">Reports and Data</a></p>
+                        <p><a href="#">Transportation</a></p>
+                        <p><a href="#">GIS Mapping</a></p>
+                        <p><a href="#">Zoning</a></p>
+                    </div>
+                    <div class="col-sm-4 footer-info-block">
+                        <h6>Connect</h6>
+                        <p><a href="#"><i class="fa fa-facebook"></i> Facebook</a></p>
+                        <p><a href="#"><i class="fa fa-twitter"></i> Twitter</a></p>
+                        <p><a href="#"><i class="fa fa-instagram"></i> Instagram</a></p>
+                        <p><a href="#"><i class="fa fa-linkedin"></i> LinkedIn</a></p>
+                        <p><a href="#"><i class="fa fa-youtube"></i> YouTube</a></p>
+                    </div>
+                    <div class="col-sm-4 footer-info-block">
+                        <h6>Contact</h6>
+                        <p>INCOG</p>
+                        <p>2 W 2nd St</p>
+                        <p>Suite 800</p>
+                        <p>Tulsa, OK, 74120</p>
+                        <p><i class="fa fa-phone"></i> 918-584-7526</p>
+                        <p><i class="fa fa-fax"></i> 918-583-1024</p>
+                        <p><i class="fa fa-envelope"></i> info@incog.org</p>
 
                     </div>
                 </div>
